Fix sidebar overflowing into nav

--- a/.vuepress/theme/styles/sidebar.css
+++ b/.vuepress/theme/styles/sidebar.css
@@ -134,5 +134,6 @@ $arrow-bg: #000;
 .sidebar-open > .sidebar {
     @screen smx {
         @apply .inline .w-full .z-50;
+        top: 60px;
     }
 }
